# coffee-shop

./: .gitignore  README.md
backend/: Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_item.rs
backend/src/: db.rs  main.rs  routes.rs
backend/src/controllers/: item.rs
backend/src/entities/: item.rs  mod.rs  prelude.rs
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.svelte  app.postcss
frontend/src/controllers/item/: insert.svelte
